OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.4.7 (2018-07-??)
------------------
- OC: Better handling of total lines (e.g. shipping) regarding whether the
  amount is inc or ex vat and vat rate lookup for those lines.
- ALL (bug): Option "Send consumer client records to Acumulus." removes country
  code before it is used to determine the vat type.
- ALL (bug): goods outside EU may use vat type = 1 when you can't or don't want
  to prove that the goods will leave the EU.
- ALL (bug): improved handling of costprice and margin lines.

5.4.6 (2018-07-10 JOO)
5.4.6 (2018-07-09 OC)
---------------------
- JOO: com_acumulusInstallerScript.php still contained references to the old
  library path and defined a psr0 namespace instead of a psr4 one.
- OC: Warning: lsprintf(): Too few arguments in Opencart/Shop/AcumulusEntryManager.php
  on line 93. Warning: mysqli::Query(): Empty query.

5.4.5 (2018-07-04)
------------------
- ALL: Notice: Undefined index: nature_shop in ConfigForm.php on line 85.

5.4.4 (2018-06-05)
------------------
- ALL: better filling and handling of field nature, especially for non-item
  fields (shipping costs, payment fee).
- WC: Styling van popup-help in het statusoverzicht op bestellingpagina.
- WC2: Fatal error: Uncaught Error: Call to a member function get_items() on
  null in Creator.
- WC2: Fatal error: Uncaught Error: Call to undefined method
  WC_Order_Refund::get_parent_id() in Source.
- WC2: Fatal error: Uncaught RuntimeException: Source::getPaymentMethodOrder()
  not implemented for Source.

5.4.3 (2018-05-31)
------------------
- ALL: feature: added support for costprice setting in all plugins, was only for