@@ -50,7 +50,8 @@ class Translations extends TranslationCollection
         'message_warning_line_without_vat' => 'Één of meer van de factuurregels hebben geen btw terwijl is ingesteld dat er "Alleen aan btw onderhevige producten en/of diensten" aangeboden worden. Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Corrigeer daar de factuur in Acumulus en controleer uw instellingen.',
         'message_warning_strategies_failed' => 'Door een fout in uw instellingen of btw tarieven, konden niet alle fatuurregels correct gecompleteerd worden. Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Corrigeer daar de factuur in Acumulus.',
         'message_warning_missing_amount_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Daarom is er een correctieregel toegevoegd met een bedrag (ex. btw) van €%1$.2f en een btw bedrag van €%2$.2f. De factuur is als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Controleer en corrigeer daar de factuur.',
-        'message_warning_missing_amount_not_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Het %1$s wijkt €%2$.2f af. De factuur is als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Controleer en corrigeer daar de factuur.',
+        'message_warning_missing_amount_warn' => 'Het factuurbedrag klopt niet met het totaal van de regels. %1$s. De factuur is als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Controleer en corrigeer daar de factuur.',
+        'message_warning_missing_amount_spec' => 'het %1$s wijkt €%2$.2f af',
         'amount_ex' => 'bedrag (ex. btw)',
         'amount_inc' => 'bedrag (incl. btw)',
         'amount_vat' => 'btw-bedrag',
@@ -100,7 +101,8 @@ class Translations extends TranslationCollection
         'message_warning_line_without_vat' => 'One or more of your invoice lines do not have VAT while you configured that you sell "Only products or services that are VAT liable.". The invoice has been saved as concept. Correct the invoice in Acumulus and check your settings.',
         'message_warning_strategies_failed' => 'Due to an error in your settings or VAT rates, we could not complete all invoice lines correctly. The invoice has been saved as concept. Correct the invoice in Acumulus.',
         'message_warning_missing_amount_added' => 'The invoice total does not match with the lines total. Therefore a corrective line was added with an amount (ex. vat) of €%1$.2f and a vat amount of €%2$.2f. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
-        'message_warning_missing_amount_not_added' => 'The invoice total does not match with the lines total. The %1$s differs with €2$.2f. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
+        'message_warning_missing_amount_warn' => 'The invoice total does not match with the lines total. %1$s. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
+        'message_warning_missing_amount_spec' => 'the %1$s differs with €2$.2f',
         'amount_ex' => 'amount (ex. vat)',
         'amount_inc' => 'amount (inc. vat)',
         'amount_vat' => 'vat amount',
